Initial project to enable Aspire 13 on Hotchoclate Fusion Gateway

--- a/quick-start.Gateway/quick-start.Gateway.csproj
+++ b/quick-start.Gateway/quick-start.Gateway.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="HotChocolate.Fusion" Version="15.1.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AspireFusion\AspireFusion.ServiceDefaults\AspireFusion.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
