--- a/quick-start.Orders/Properties/launchSettings.json
+++ b/quick-start.Orders/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:49992;http://localhost:49993"
+      "applicationUrl": "https://localhost:49992/graphql;http://localhost:49993/graphql"
     }
   }
 }
