--- a/quick-start.Products/Properties/launchSettings.json
+++ b/quick-start.Products/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:50288;http://localhost:50289"
+      "applicationUrl": "https://localhost:50288/graphql;http://localhost:50289/graphql"
     }
   }
 }
