--- a/quick-start.Products/quick-start.Products.csproj
+++ b/quick-start.Products/quick-start.Products.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AspireFusion\AspireFusion.ServiceDefaults\AspireFusion.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
