--- a/quick-start.Gateway/Properties/launchSettings.json
+++ b/quick-start.Gateway/Properties/launchSettings.json
@@ -5,7 +5,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7184/graphql;http://localhost:5290/graphql",
+      "applicationUrl": "https://localhost:7184;http://localhost:5290",
+      "launchUrl": "graphql",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
