--- a/quick-start.Products/appsettings.json
+++ b/quick-start.Products/appsettings.json
@@ -9,7 +9,8 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "http://localhost:5003"
+        "Url": "http://localhost:5003",
+        "launchUrl": "graphql"
       }
     }
   }
